# dlio-perf

./: .clang-format  .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  client.cpp  mpi.cpp  server.cpp  test.cpp  test_yaml_config.cpp
apps/dlio-perf/: CMakeLists.txt  main.cpp
apps/master/: CMakeLists.txt  main.cpp
apps/slave/: CMakeLists.txt  main.cpp
config/: kwai.yaml  test.yaml
include/: AsynCheckpoint.h  BatchTask.h  Checkpoint.h  CheckpointFactory.h  ConfigManager.h  DatasetGenThread.h  Dentry.h  File.h  FileSystem.h  FileSystemFactory.h  IORequest.h  LocalFile.h  LocalFileSystem.h  LogManager.h  OperationInfo.h  PerfCounter.h  PerfResult.h  RequestQueue.h  RunnerMaster.h  RunnerSlave.h  Semaphore.h  SlaveStatus.h  SyncCheckpoint.h
scripts/: dlio-perf  start-slave.sh  start_test.py  test.yaml
src/: CMakeLists.txt  RunnerMaster.cpp  RunnerMaster.h
src/Checkpoint/: AsynCheckpoint.cpp  Checkpoint.cpp  CheckpointFactory.cpp  SyncCheckpoint.cpp
src/ConfigManager/: ConfigManager.cpp
src/FileSystem/: Dentry.cpp  FileSystemFactory.cpp  LocalFile.cpp  LocalFileSystem.cpp
src/IOThead/: BatchTask.cpp  DatasetGenThread.cpp  IORequest.cpp  RequestQueue.cpp
src/LogManager/: LogManager.cpp
src/Perf/: OperationInfo.cpp  PerfCounter.cpp  PerfResult.cpp
src/Runner/: RunnerMaster.cpp  RunnerSlave.cpp  SlaveStatus.cpp
src/checkpoint/: Checkpoint.cpp  CheckpointFactory.cpp  SyncCheckpoint.cpp
tests/: CMakeLists.txt
work_dir/base_config/: test.yaml
work_dir/test_config/: test.yaml
